--- a/Projects/Architecture3.Common/Architecture3.Common.csproj
+++ b/Projects/Architecture3.Common/Architecture3.Common.csproj
@@ -81,8 +81,8 @@
     <Compile Include="Tools\Interfaces\IAssemblyVersionProvider.cs" />
     <Compile Include="ValueObjects\IdVersion.cs" />
     <Compile Include="ValueObjects\Paged.cs" />
-    <Compile Include="ValueObjects\PageSizeSkip.cs" />
-    <Compile Include="ValueObjects\SortPageSizeSkip.cs" />
+    <Compile Include="ValueObjects\TopSkip.cs" />
+    <Compile Include="ValueObjects\OrderByTopSkip.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
