--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -61,6 +61,9 @@
     <Compile Include="CQ\Product\Delete\CommandHandler.cs" />
     <Compile Include="CQ\Product\Delete\Interfaces\IRepository.cs" />
     <Compile Include="CQ\Product\Delete\Repository.cs" />
+    <Compile Include="CQ\TemplateMethods\Commands\DeleteCommandHandler.cs" />
+    <Compile Include="CQ\TemplateMethods\Commands\Interfaces\IDeleteCommand.cs" />
+    <Compile Include="CQ\TemplateMethods\Commands\Interfaces\IDeleteRepository.cs" />
     <Compile Include="Database\DbConnectionProvider.cs" />
     <Compile Include="Facades\ProductsDeleteFacade.cs" />
     <Compile Include="Facades\Shared\Error.cs" />
