--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CQ\TemplateMethods\Commands\UpdateCommandHandlerTemplate.cs" />
     <Compile Include="Database\DbConnectionProvider.cs" />
     <Compile Include="Facades\ProductsDeleteFacade.cs" />
+    <Compile Include="Facades\ProductsPostFacade.cs" />
     <Compile Include="Facades\ProductsPutFacade.cs" />
     <Compile Include="Facades\Shared\Error.cs" />
     <Compile Include="Facades\FilterPagedFacade.cs" />
