--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CQ\Version\Get\QueryHandler.cs" />
     <Compile Include="CQ\Version\Get\Query.cs" />
+    <Compile Include="Shared\ErrorResultExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
