--- a/Projects/Architecture3.Common/Architecture3.Common.csproj
+++ b/Projects/Architecture3.Common/Architecture3.Common.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Handlers\SingleInstanceFactory.cs" />
     <Compile Include="Log4Net\Extension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Tools\AssemblyVersionProvider.cs" />
     <Compile Include="Tools\Interfaces\IAssemblyVersionProvider.cs" />
     <Compile Include="ValueObjects\IdVersion.cs" />
