--- a/Projects/Architecture3.Types/Architecture3.Types.csproj
+++ b/Projects/Architecture3.Types/Architecture3.Types.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FunctionalExtensions\ResultCommonLogic.cs" />
     <Compile Include="FunctionalExtensions\Result.cs" />
+    <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
