--- a/Projects/Architecture3.WebApi.Client/packages.config
+++ b/Projects/Architecture3.WebApi.Client/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="1.29.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="NullGuard.Fody" version="1.4.6" targetFramework="net461" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
