--- a/Projects/Architecture3.Db/Architecture3.DbMigrator.csproj
+++ b/Projects/Architecture3.Db/Architecture3.DbMigrator.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{39777826-5872-43FB-B991-0E40EA109CBD}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Architecture3.Db</RootNamespace>
-    <AssemblyName>Architecture3.Db</AssemblyName>
+    <RootNamespace>Architecture3.DbMigrator</RootNamespace>
+    <AssemblyName>Architecture3.DbMigrator</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -53,7 +53,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Architecture3.Db.Program</StartupObject>
+    <StartupObject>Architecture3.DbMigrator.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DbUp, Version=3.3.5.0, Culture=neutral, PublicKeyToken=4b419c53bdfd4cbf, processorArchitecture=MSIL">
