--- a/Projects/Architecture3.DbMigrator/Architecture3.DbMigrator.csproj
+++ b/Projects/Architecture3.DbMigrator/Architecture3.DbMigrator.csproj
@@ -111,7 +111,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <EmbeddedResource Include="Scripts\20161018_0010_Product.sql" />
+    <EmbeddedResource Include="Scripts\20161018_0010_Products.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\OctoPack.3.4.2\tools\OctoPack.targets" Condition="Exists('..\..\packages\OctoPack.3.4.2\tools\OctoPack.targets')" />
